site/web/app/themes/host/assets/sass/components/_location-related-buildings.scss
// ==========================================================================
//
// RELATED BUILDINGS
//
// Description: Component that contains all buildings that are connected
//              to the same location.
//
// ==========================================================================

// ==========================================================================
// # BASE
// ==========================================================================


// ==========================================================================
// # MAIN
// ==========================================================================
.location-related-building-btn-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.location-related-building-dots {
    display: flex;
    position: relative;
    flex: 1;
}

// ==========================================================================
// # ASIDE
// ==========================================================================

// .related-building-aside {}

.related-building-aside-image {
    min-height: 40vh;
}

.related-building-aside-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;

    @include mq($until: medium) {
        padding: $half-spacing-unit 0;
    }
}

.related-building-aside-content__icon {
    display: block;
    margin: 0 auto $half-spacing-unit;
}

